--- a/_modules/copyxnat/commands/check_datatypes_command.html
+++ b/_modules/copyxnat/commands/check_datatypes_command.html
@@ -76,7 +76,7 @@
     <span class="p">}</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">inputs</span><span class="p">,</span> <span class="n">scope</span><span class="p">):</span>
-        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">inputs</span><span class="p">,</span> <span class="n">scope</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">CheckDatatypesCommand</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">inputs</span><span class="p">,</span> <span class="n">scope</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">outputs</span> <span class="o">=</span> <span class="p">{</span>
             <span class="s1">&#39;datatypes_on_dest&#39;</span><span class="p">:</span> <span class="n">inputs</span><span class="o">.</span><span class="n">dst_xnat</span><span class="o">.</span><span class="n">datatypes</span><span class="p">(),</span>
             <span class="s1">&#39;missing_session_datatypes&#39;</span><span class="p">:</span> <span class="nb">set</span><span class="p">(),</span>
