--- a/_modules/copyxnat/utils/rsync.html
+++ b/_modules/copyxnat/utils/rsync.html
@@ -45,6 +45,8 @@
 <span class="kn">import</span> <span class="nn">getpass</span>
 <span class="kn">import</span> <span class="nn">subprocess</span>
 
+<span class="kn">import</span> <span class="nn">six</span>
+
 <span class="kn">from</span> <span class="nn">copyxnat.pyreporter.pyreporter</span> <span class="kn">import</span> <span class="n">ProjectFailure</span>
 <span class="kn">from</span> <span class="nn">copyxnat.utils.network_utils</span> <span class="kn">import</span> <span class="n">get_host</span>
 
@@ -122,7 +124,7 @@
                                 <span class="s1">&#39;</span><span class="si">{}</span><span class="s1">. The error was :</span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">string_command</span><span class="p">,</span>
                                                                <span class="nb">str</span><span class="p">(</span><span class="n">exc</span><span class="p">))</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="n">error_message</span><span class="p">)</span>
-                <span class="k">raise</span> <span class="n">ProjectFailure</span><span class="p">(</span><span class="n">error_message</span><span class="p">)</span> <span class="kn">from</span> <span class="nn">exc</span></div>
+                <span class="n">six</span><span class="o">.</span><span class="n">raise_from</span><span class="p">(</span><span class="n">ProjectFailure</span><span class="p">(</span><span class="n">error_message</span><span class="p">),</span> <span class="n">exc</span><span class="p">)</span></div>
 </pre></div>
 
             <div class="clearer"></div>
