--- a/_modules/copyxnat/xnat_backend/pyxnat_server.html
+++ b/_modules/copyxnat/xnat_backend/pyxnat_server.html
@@ -105,7 +105,7 @@
                 <span class="nb">format</span><span class="p">(</span><span class="n">project</span><span class="p">)))</span></div>
 
 <div class="viewcode-block" id="PyXnatServer.experiment_list"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.experiment_list">[docs]</a>    <span class="k">def</span> <span class="nf">experiment_list</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">project</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Return number of experiments in this project&quot;&quot;&quot;</span>
+        <span class="sd">&quot;&quot;&quot;Return list of experiments in this project&quot;&quot;&quot;</span>
 
         <span class="n">exps</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">_get_json</span><span class="p">(</span><span class="s1">&#39;/REST/projects/</span><span class="si">{}</span><span class="s1">/experiments&#39;</span><span class="o">.</span>  <span class="c1"># pylint: disable=protected-access</span>
                 <span class="nb">format</span><span class="p">(</span><span class="n">project</span><span class="p">))</span>
@@ -270,8 +270,7 @@
                 <span class="n">overwrite</span><span class="o">=</span><span class="n">overwrite</span>
             <span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">reporter</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Resource is empty or zip download is &quot;</span>
-                                 <span class="s2">&quot;disabled&quot;</span><span class="p">)</span></div>
+            <span class="n">reporter</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Resource is empty or zip upload is disabled&quot;</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="PyXnatResourceBase.download_zip_file"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.download_zip_file">[docs]</a>    <span class="k">def</span> <span class="nf">download_zip_file</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">save_dir</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Get zip file from server and save to disk&quot;&quot;&quot;</span>
@@ -338,8 +337,7 @@
                 <span class="n">overwrite</span><span class="o">=</span><span class="n">overwrite</span>
             <span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">reporter</span><span class="o">.</span><span class="n">log_verbose</span><span class="p">(</span><span class="s2">&quot;Resource is empty or zip download is &quot;</span>
-                                 <span class="s2">&quot;disabled&quot;</span><span class="p">)</span></div>
+            <span class="n">reporter</span><span class="o">.</span><span class="n">log_verbose</span><span class="p">(</span><span class="s2">&quot;Resource is empty or upload is by zip&quot;</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="PyXnatFile.download_file"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.download_file">[docs]</a>    <span class="k">def</span> <span class="nf">download_file</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">save_dir</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Get file from server and save to disk&quot;&quot;&quot;</span>
