--- a/_modules/copyxnat/xnat_backend/xnat_session.html
+++ b/_modules/copyxnat/xnat_backend/xnat_session.html
@@ -41,7 +41,7 @@
 <span></span><span class="c1"># coding=utf-8</span>
 
 <span class="sd">&quot;&quot;&quot;Wrappers for communicating between copyxnat items and pyXNAT backend items&quot;&quot;&quot;</span>
-<span class="kn">from</span> <span class="nn">requests</span> <span class="kn">import</span> <span class="n">request</span>
+<span class="kn">import</span> <span class="nn">requests</span>
 <span class="kn">from</span> <span class="nn">requests.auth</span> <span class="kn">import</span> <span class="n">HTTPBasicAuth</span>
 
 
@@ -176,7 +176,7 @@
 <span class="sd">        :param stream: True if content is streamed</span>
 <span class="sd">        :return: requests.Response</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">request</span><span class="p">(</span>
+        <span class="k">return</span> <span class="n">requests</span><span class="o">.</span><span class="n">request</span><span class="p">(</span>
             <span class="n">method</span><span class="o">=</span><span class="n">method</span><span class="p">,</span>
             <span class="n">url</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_get_url</span><span class="p">(</span><span class="n">uri</span><span class="p">),</span>
             <span class="n">auth</span><span class="o">=</span><span class="n">auth</span><span class="p">,</span>
