deploy: 424de961d20aa4a2db8c6fdb5cad71d45db07780

--- a/copyxnat.xnat_backend.simple_xnat.html
+++ b/copyxnat.xnat_backend.simple_xnat.html
@@ -16,7 +16,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="copyxnat.xnat_backend.xnat_rest_client module" href="copyxnat.xnat_backend.xnat_rest_client.html" />
+    <link rel="next" title="copyxnat.xnat_backend.utis module" href="copyxnat.xnat_backend.utis.html" />
     <link rel="prev" title="copyxnat.xnat_backend.server_factory module" href="copyxnat.xnat_backend.server_factory.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
@@ -29,7 +29,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.xnat_rest_client.html" title="copyxnat.xnat_backend.xnat_rest_client module"
+          <a href="copyxnat.xnat_backend.utis.html" title="copyxnat.xnat_backend.utis module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="copyxnat.xnat_backend.server_factory.html" title="copyxnat.xnat_backend.server_factory module"
@@ -784,8 +784,8 @@ used for write operations</p>
   <p class="topless"><a href="copyxnat.xnat_backend.server_factory.html"
                         title="previous chapter">copyxnat.xnat_backend.server_factory module</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="copyxnat.xnat_backend.xnat_rest_client.html"
-                        title="next chapter">copyxnat.xnat_backend.xnat_rest_client module</a></p>
+  <p class="topless"><a href="copyxnat.xnat_backend.utis.html"
+                        title="next chapter">copyxnat.xnat_backend.utis module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -817,7 +817,7 @@ used for write operations</p>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.xnat_rest_client.html" title="copyxnat.xnat_backend.xnat_rest_client module"
+          <a href="copyxnat.xnat_backend.utis.html" title="copyxnat.xnat_backend.utis module"
              >next</a> |</li>
         <li class="right" >
           <a href="copyxnat.xnat_backend.server_factory.html" title="copyxnat.xnat_backend.server_factory module"
