--- a/copyxnat.xnat_backend.xnat_rest_client.html
+++ b/copyxnat.xnat_backend.xnat_rest_client.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.xnat_backend.xnat_session module" href="copyxnat.xnat_backend.xnat_session.html" />
-    <link rel="prev" title="copyxnat.xnat_backend.simple_xnat module" href="copyxnat.xnat_backend.simple_xnat.html" /> 
+    <link rel="prev" title="copyxnat.xnat_backend.utis module" href="copyxnat.xnat_backend.utis.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.xnat_backend.xnat_session.html" title="copyxnat.xnat_backend.xnat_session module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.simple_xnat.html" title="copyxnat.xnat_backend.simple_xnat module"
+          <a href="copyxnat.xnat_backend.utis.html" title="copyxnat.xnat_backend.utis module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -216,8 +216,8 @@ optional should be True if not mandated by the schema</p>
               <img class="logo" src="_static/project-icon.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.xnat_backend.simple_xnat.html"
-                        title="previous chapter">copyxnat.xnat_backend.simple_xnat module</a></p>
+  <p class="topless"><a href="copyxnat.xnat_backend.utis.html"
+                        title="previous chapter">copyxnat.xnat_backend.utis module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.xnat_backend.xnat_session.html"
                         title="next chapter">copyxnat.xnat_backend.xnat_session module</a></p>
@@ -255,7 +255,7 @@ optional should be True if not mandated by the schema</p>
           <a href="copyxnat.xnat_backend.xnat_session.html" title="copyxnat.xnat_backend.xnat_session module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat_backend.simple_xnat.html" title="copyxnat.xnat_backend.simple_xnat module"
+          <a href="copyxnat.xnat_backend.utis.html" title="copyxnat.xnat_backend.utis module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
