--- a/_modules/index.html
+++ b/_modules/index.html
@@ -66,6 +66,7 @@
 <li><a href="copyxnat/xnat_backend/pyxnat_server.html">copyxnat.xnat_backend.pyxnat_server</a></li>
 <li><a href="copyxnat/xnat_backend/server_factory.html">copyxnat.xnat_backend.server_factory</a></li>
 <li><a href="copyxnat/xnat_backend/simple_xnat.html">copyxnat.xnat_backend.simple_xnat</a></li>
+<li><a href="copyxnat/xnat_backend/utis.html">copyxnat.xnat_backend.utis</a></li>
 <li><a href="copyxnat/xnat_backend/xnat_rest_client.html">copyxnat.xnat_backend.xnat_rest_client</a></li>
 <li><a href="copyxnat/xnat_backend/xnat_session.html">copyxnat.xnat_backend.xnat_session</a></li>
 <li><a href="versioneer.html">versioneer</a></li>
