--- a/genindex.html
+++ b/genindex.html
@@ -71,8 +71,6 @@
 </li>
       <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.LazyList.add_new">add_new() (copyxnat.xnat_backend.simple_xnat.LazyList method)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.SessionId.add_session_header">add_session_header() (copyxnat.xnat_backend.xnat_session.SessionId method)</a>
-</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">add_tag_remaps() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.simple_xnat.html#copyxnat.xnat_backend.simple_xnat.SimpleXnatItem.add_to_parent">add_to_parent() (copyxnat.xnat_backend.simple_xnat.SimpleXnatItem method)</a>
@@ -126,6 +124,8 @@
       <li><a href="copyxnat.pyreporter.console.html#copyxnat.pyreporter.console.AnsiCodes.CLEAR">CLEAR (copyxnat.pyreporter.console.AnsiCodes attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.clear">clear() (copyxnat.xnat.copy_cache.CopyCache method)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.utis.html#copyxnat.xnat_backend.utis.Utils.combine_dicts">combine_dicts() (copyxnat.xnat_backend.utis.Utils static method)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
@@ -307,8 +307,6 @@
         <li><a href="copyxnat.pyreporter.progress.html#module-copyxnat.pyreporter.progress">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.pyreporter
 
@@ -316,6 +314,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -433,6 +433,13 @@
 
       <ul>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#module-copyxnat.xnat_backend.simple_xnat">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.xnat_backend.utis
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.utis.html#module-copyxnat.xnat_backend.utis">module</a>
 </li>
       </ul></li>
       <li>
@@ -767,6 +774,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_server">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.RestWrapper.get_url">get_url() (copyxnat.xnat_backend.xnat_session.RestWrapper method)</a>
+</li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version">get_version() (in module copyxnat.utils.versioning)</a>
 
       <ul>
@@ -1072,6 +1081,8 @@
         <li><a href="copyxnat.xnat_backend.server_factory.html#module-copyxnat.xnat_backend.server_factory">copyxnat.xnat_backend.server_factory</a>
 </li>
         <li><a href="copyxnat.xnat_backend.simple_xnat.html#module-copyxnat.xnat_backend.simple_xnat">copyxnat.xnat_backend.simple_xnat</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.utis.html#module-copyxnat.xnat_backend.utis">copyxnat.xnat_backend.utis</a>
 </li>
         <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#module-copyxnat.xnat_backend.xnat_rest_client">copyxnat.xnat_backend.xnat_rest_client</a>
 </li>
@@ -1419,8 +1430,6 @@
       <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request">request() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.RestWrapper.request">(copyxnat.xnat_backend.xnat_session.RestWrapper method)</a>
-</li>
         <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.XnatSession.request">(copyxnat.xnat_backend.xnat_session.XnatSession method)</a>
 </li>
       </ul></li>
@@ -1444,10 +1453,10 @@
       </ul></li>
       <li><a href="copyxnat.xnat_backend.xnat_rest_client.html#copyxnat.xnat_backend.xnat_rest_client.XnatRestClient.request_xml_string">request_xml_string() (copyxnat.xnat_backend.xnat_rest_client.XnatRestClient method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.SessionId.reset">reset() (copyxnat.xnat_backend.xnat_session.SessionId method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.resolve_projects">resolve_projects() (in module copyxnat.api.run_command)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.RESOURCE">RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
@@ -1553,6 +1562,8 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.SERVER">SERVER (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.SessionId.session_header">session_header() (copyxnat.xnat_backend.xnat_session.SessionId method)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.xnat_session.html#copyxnat.xnat_backend.xnat_session.SessionId">SessionId (class in copyxnat.xnat_backend.xnat_session)</a>
 </li>
@@ -1672,6 +1683,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.user_visible_info">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat_backend.utis.html#copyxnat.xnat_backend.utis.Utils">Utils (class in copyxnat.xnat_backend.utis)</a>
+</li>
   </ul></td>
 </tr></table>
 
